# poemApp

./: README.md  docker-compose.yml  index.html  poems_clean.sql
assets/: index-BRBSDboe.css  index-Ce3C-3oa.js
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  Poem.jsx
